test_suite/alan-2022-examples/failing/002190_mutation.alan
source t begin get B[0] to end
